dark mode fixes

--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -398,7 +398,7 @@ Navbar colors
 
   .form-control {
     border-color: transparent;
-    background: $dark-lighten;
+    background: $dark-mode-lighten;
     color: $white;
   }
 }
